--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
         "@wangeditor/editor-for-vue": "^5.1.11",
         "core-js": "^3.8.3",
         "vue": "^3.2.13",
-        "vue-router": "^4.0.16"
+        "vue-router": "^4.0.16",
+        "xlsx": "^0.18.5"
     },
     "devDependencies": {
         "@babel/core": "^7.12.16",
@@ -21,12 +22,14 @@
         "@vue/cli-plugin-eslint": "~5.0.0",
         "@vue/cli-service": "~5.0.0",
         "eslint": "^7.32.0",
-        "eslint-plugin-vue": "^8.0.3"
+        "eslint-plugin-vue": "^8.0.3",
+        "node-sass": "^9.0.0",
+        "sass-loader": "^13.3.1"
     },
     "eslintConfig": {
-        "root": true,
+        "root": false,
         "env": {
-            "node": true
+            "node": false
         },
         "extends": [
             "plugin:vue/vue3-essential",
