--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
         "lint": "vue-cli-service lint"
     },
     "dependencies": {
+        "@babel/preset-env": "^7.22.4",
         "@wangeditor/editor": "^5.1.1",
         "@wangeditor/editor-for-vue": "^5.1.11",
         "core-js": "^3.8.3",
@@ -16,7 +17,7 @@
         "xlsx": "^0.18.5"
     },
     "devDependencies": {
-        "@babel/core": "^7.12.16",
+        "@babel/core": "^7.22.1",
         "@babel/eslint-parser": "^7.12.16",
         "@vue/cli-plugin-babel": "~5.0.0",
         "@vue/cli-plugin-eslint": "~5.0.0",
