--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "scripts": {
         "serve": "vue-cli-service serve",
         "build": "vue-cli-service build",
-        "lint": "vue-cli-service lint"
+        "lint": "vue-cli-service lint",
+        "deploy": "git subtree pull --prefix dist origin gh-pages && git subtree push --prefix dist origin gh-pages"
     },
     "dependencies": {
         "@babel/preset-env": "^7.22.4",
