--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "@wangeditor/editor-for-vue": "^5.1.11",
         "core-js": "^3.8.3",
         "element-plus": "^2.3.6",
+        "highcharts": "^11.2.0",
         "vue": "^3.2.13",
         "vue-router": "^4.0.16",
         "xlsx": "^0.18.5"
